--- a/src/containers/HomePage/Homepage.scss
+++ b/src/containers/HomePage/Homepage.scss
@@ -63,6 +63,8 @@
     .section-body {
         
         .station-customize {
+            cursor: pointer;
+
             .bg-image {
                 height: 278px;
                 width: 380px;
