--- a/src/components/Client/Station/StationDetail.scss
+++ b/src/components/Client/Station/StationDetail.scss
@@ -55,4 +55,123 @@
             }
         }
     }
+
+    .schedule {
+        .s-title {
+            font-size: 30px;
+            font-weight: 600;
+        }
+        
+        .title-content {
+            display: flex;
+            font-size: 20px;
+
+            .title-icon {
+                padding-top: 5px;
+            }
+
+            .title-text {
+                margin: 5px 20px;
+                width: 200px;
+            }
+
+            .title-time {
+                padding-top: 5px;
+            }
+        }
+    }
+
+    .ticket-modal {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.4);
+        display: none;
+        align-items: center;
+        justify-content: center;
+
+        .ticket-container {
+            display: absolute;
+            position: relative;
+            background: #fff;
+            // width: 700px;
+            min-height: 500px;
+
+            .ticket-close {
+                position: absolute;
+                right: 0;
+                top: 0;
+                color: #fff;
+                padding: 12px;
+                font-size: 20px;
+                cursor: pointer;
+
+                &:hover {
+                    opacity: 0.8;
+                    background-color: #fff;
+                }
+            }
+
+            .ticket-header {
+                background: #009688;
+                height: 80px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 25px;
+                color: #fff;
+            }
+
+            i {
+                margin-right: 16px;
+            }
+
+            .ticket-body {
+                width: 600px;
+
+                .left {
+                    width: 50%;
+                    margin-left: 30px;
+    
+                    .form-control{
+                        margin: 1px 0;
+                        width: 70%;
+    
+                        .ticket-option {
+                            border: 1px solid #ccc;
+                        }
+                    }
+                }
+                .ticket-label {
+                    padding-top: 10px;
+                }
+    
+                .btn-ticket {
+                    margin-top: 20px;
+                    // padding-left: 30px;
+                    border: none;
+                    background: #009688;
+                    color: #fff;
+                    width: 100%;
+                    text-transform: uppercase;
+                    font-size: 15px;
+
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.8;
+                    }
+                }
+            }
+
+            .ticket-footer {
+                padding: 16px;
+                text-align: right;
+            }
+
+            
+        }
+        
+    }
 }
