--- a/src/containers/HomePage/Homepage.scss
+++ b/src/containers/HomePage/Homepage.scss
@@ -42,6 +42,11 @@
     &.station-section{
         background: #f5f5f5;
     }
+    &.section-about {
+        border-top: 1px solid #f5f5f5;
+        border-bottom: 1px solid #f5f5f5;
+        height: 500px !important;
+    }
 
     .station-container{
         margin: 0 100px;
@@ -73,9 +78,9 @@
                 background-size: cover !important;
                 background-color: #eee;
 
-                &.station-img {
-                    background: url('../../assets/stationimg/station2.jpg');
-                }
+                // &.station-img {
+                //     background: url('../../assets/stationimg/station2.jpg');
+                // }
                 
             }       
             
@@ -85,6 +90,16 @@
 .home-footer {
     text-align: center;
     
+}
+
+.section-about {
+    padding: 0 100px;
+
+    .section-about-header {
+        padding: 20px 10px;
+        font-size: 22px;
+        font-weight: 600;
+    }
 }
     
 
