--- a/src/containers/HomePage/Section/Station.scss
+++ b/src/containers/HomePage/Section/Station.scss
@@ -21,6 +21,42 @@
 //     }
 // }
 
+.station-customize {
+    .bg-image1 {
+        height: 278px;
+        width: 380px;
+        background: url('../../../assets/stationimg/station1.jpg');
+        background-position: center center;
+        background-size: cover;
+        background-color: #eee;
+    }
+    .bg-image2 {
+        height: 278px;
+        width: 380px;
+        background: url('../../../assets/stationimg/station2.jpg');
+        background-position: center center;
+        background-size: cover;
+        background-color: #eee;
+    }
+    .bg-image3 {
+        height: 278px;
+        width: 380px;
+        background: url('../../../assets/stationimg/station3.jpg');
+
+        background-position: center center;
+        background-size: cover;
+        background-color: #eee;
+    }
+    .bg-image4 {
+        height: 278px;
+        width: 380px;
+        background: url('../../../assets/stationimg/station4.jpg');
+        background-position: center center;
+        background-size: cover;
+        background-color: #eee;
+    }
+}
+
 .btn-buy {
     background-color: #4caf50;
     color: #fff;
